@@ -1,6 +1,8 @@
 * 2013-10-01 - thorben.betten@open-xchange.com
 
  - Change for bug 29081: Adapted category of error code 'UWA_WIDGET-0004' to USER_INPUT to display meaningful error message to the user
+ - Fix for bug 28274: Support optional parameter "failOnError" to let client decide whether an error is supposed to be thrown in case of a
+                      delete failure or not
 
 * 2013-09-30 - thorben.betten@open-xchange.com
 
